ast/tests/snapshots/ast__variable_var_no_value.snap
---
source: ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstBlock {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 10,
            },
        },
        entries: [
            Variable(
                AstBlockVariable {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 1,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 9,
                        },
                    },
                    fin: false,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 5,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 6,
                            },
                        },
                        value: "a",
                    },
                    jtype: AstJType {
                        range: AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 1,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 4,
                            },
                        },
                        value: Var,
                    },
                    expression: None,
                },
            ),
        ],
    },
    5,
)
